--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,19 @@
-version: '3.8'
 services:
   go_app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    networks:
-      go_caddy_network:
-        ipv4_address: 172.28.0.2
+    build: .
     ports:
-      - "8080:8080"
-    container_name: go_app_caddy
+      - "3000:3000"
+    networks:
+      - webnet
 
   caddy:
     image: caddy:latest
-    ports:
-      - "80:80"
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
-    depends_on:
-      - go_app
+    ports:
+      - "8080:80"
     networks:
-      go_caddy_network:
-        ipv4_address: 172.28.0.3
-    container_name: caddy
+      - webnet
 
 networks:
-  go_caddy_network:
-    driver: bridge
-    ipam:
-      config:
-        - subnet: 172.28.0.0/16
+  webnet:
